crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__array_copy.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 21
        },
        "end": {
          "line": 3,
          "character": 24
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "array `$src` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
