crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__array_get.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 8,
          "character": 24
        },
        "end": {
          "line": 8,
          "character": 27
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "array `$packed` is unnecessarily mutable",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 19
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "array `0` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
