crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__global_get_with_ident_idx.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 19
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "global `$global` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
