crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__imported_global.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 33
        },
        "end": {
          "line": 2,
          "character": 36
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "`$global` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
