crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__struct_get.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 24
        },
        "end": {
          "line": 2,
          "character": 27
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "field `0` is unnecessarily mutable",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 48
        },
        "end": {
          "line": 7,
          "character": 51
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "field `$packed_field` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
