crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__unused_array.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 19
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "array `0` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
