crates/service/tests/diagnostics/snapshots/features__diagnostics__needless_mut__unused_global.snap
---
source: crates/service/tests/diagnostics/needless_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 11
        },
        "end": {
          "line": 2,
          "character": 14
        }
      },
      "severity": 2,
      "code": "needless-mut",
      "source": "wat",
      "message": "`0` is unnecessarily mutable",
      "tags": [
        1
      ]
    }
  ]
}
